fixed indexing error

--- a/hackathon/profundo/data_processing/02_prep_SWC_for_img_generator.ipynb
+++ b/hackathon/profundo/data_processing/02_prep_SWC_for_img_generator.ipynb
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -130,7 +130,7 @@
     "\n",
     "def upsampled_branches_to_cubes(swc_fname, swc_abs_path):\n",
     "    # load to dframe\n",
-    "    nodes = swc_to_dframe(swc_abs_path[i])\n",
+    "    nodes = swc_to_dframe(swc_abs_path)\n",
     "        \n",
     "    assert isinstance(nodes, pd.DataFrame)\n",
     "    \n",
@@ -147,11 +147,14 @@
     "                              (nodes.z.between(nodes.z.min()+padding,nodes.z.max()+padding))]\n",
     "        \n",
     "        sampled_nodes = central_nodes.sample(n=50, replace=False)\n",
+    "        \n",
     "        for sample_i, center_node in sampled_nodes.iterrows():\n",
     "                # grab all nodes in neighborhood of center_node\n",
     "                sample = nodes.loc[(nodes.x.between(center_node.x.item()-half_size, center_node.x.item()+half_size)) &\n",
     "                                  (nodes.y.between(center_node.y.item()-half_size, center_node.y.item()+half_size)) &\n",
     "                                  (nodes.z.between(center_node.z.item()-half_size, center_node.z.item()+half_size))]\n",
+    "                \n",
+    "                print(sample)\n",
     "\n",
     "                # save sample to swc\n",
     "                #print(\"saving \", fnames[i])\n",
