mv func to own file

--- a/hackathon/profundo/data_processing/02_prep_SWC_for_img_generator.ipynb
+++ b/hackathon/profundo/data_processing/02_prep_SWC_for_img_generator.ipynb
@@ -68,7 +68,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Use the \"resample_swc\" Vaa3D plugin (written in C) to upsample all our data. I used concurrent.futures to split the job over multiple processors, change `n_workers` to suit your needs."
+    "I used concurrent.futures to split the job over multiple processors, change `n_workers` to suit your needs."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from multiprocessing import multithreading"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Use the \"resample_swc\" Vaa3D plugin (written in C) to upsample all our data. "
    ]
   },
   {
@@ -79,15 +95,6 @@
    "source": [
     "fnames, abs_paths = get_fnames_and_abspath_from_dir(BRANCHES_DIR)\n",
     "assert(len(fnames)>0)\n",
-    "\n",
-    "#https://medium.com/@bfortuner/python-multithreading-vs-multiprocessing-73072ce5600b\n",
-    "from concurrent.futures import ProcessPoolExecutor, ThreadPoolExecutor\n",
-    "\n",
-    "def multithreading(func, args, n_workers):\n",
-    "    with ThreadPoolExecutor(n_workers) as ex:\n",
-    "        #https://stackoverflow.com/a/6976926/4212158\n",
-    "        results = ex.map(lambda params: func(*params), args)\n",
-    "    return list(results)\n",
     "\n",
     "vaa3d_repeated = [vaa3d_path for _ in range(len(fnames))]\n",
     "\n",
@@ -114,7 +121,15 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "filtering branches that have any dimension smaller than  10.0\n"
+     ]
+    }
+   ],
    "source": [
     "# tested size 25, but no branches met this criteria\n",
     "TARGET_DIM_SIZE = 10.  # size in pixels for all x,y,z dims\n",
@@ -154,7 +169,7 @@
     "                                  (nodes.y.between(center_node.y.item()-half_size, center_node.y.item()+half_size)) &\n",
     "                                  (nodes.z.between(center_node.z.item()-half_size, center_node.z.item()+half_size))]\n",
     "                \n",
-    "                print(sample)\n",
+    "                #print(sample)\n",
     "\n",
     "                # save sample to swc\n",
     "                #print(\"saving \", fnames[i])\n",
