fixed name collision w multithreading

--- a/hackathon/profundo/data_processing/03_meancenter_SWC.ipynb
+++ b/hackathon/profundo/data_processing/03_meancenter_SWC.ipynb
@@ -2,33 +2,23 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "AssertionError",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAssertionError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-5-8e9ed6567185>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      8\u001b[0m \u001b[0mfnames\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mabs_paths\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mget_fnames_and_abspath_from_dir\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mUPSAMPLED_BRANCHES_DIR\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 9\u001b[0;31m \u001b[0;32massert\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfnames\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m>\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     10\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfnames\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     11\u001b[0m     \u001b[0mnodes\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mswc_to_dframe\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mabs_paths\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mAssertionError\u001b[0m: "
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from swc_io import get_fnames_and_abspath_from_dir, swc_to_dframe, resample_swc, dframe_to_swc\n",
     "import numpy as np\n",
     "import pandas as pd\n",
+    "from threader import multithreading\n",
     "\n",
-    "UPSAMPLED_BRANCHES_DIR = \"../data/04_human_branches_filtered_upsampled\"\n",
-    "MEAN_CENTERED_BRANCHES_DIR = \"../data/05_meancentered_branches\"\n",
+    "CUBES_DIR = \"../data/05_sampled_cubes\"\n",
+    "MEAN_CENTERED_CUBES_DIR = \"../data/06_centered_cubes\"\n",
     "\n",
-    "fnames, abs_paths = get_fnames_and_abspath_from_dir(UPSAMPLED_BRANCHES_DIR)\n",
+    "fnames, abs_paths = get_fnames_and_abspath_from_dir(CUBES_DIR)\n",
     "assert(len(fnames) > 0)\n",
-    "for i in range(len(fnames)):\n",
-    "    nodes = swc_to_dframe(abs_paths[i])\n",
+    "\n",
+    "def center_cube(fname, abs_path):\n",
+    "    nodes = swc_to_dframe(abs_path)\n",
     "    \n",
     "    x_min = nodes.x.min()\n",
     "    x_halfspan = (nodes.x.max() - x_min)/2\n",
@@ -45,7 +35,10 @@
     "    # center z\n",
     "    nodes.z = nodes.z - (z_min + z_halfspan)\n",
     "    \n",
-    "    print(nodes.z.mean, nodes.x.mean, nodes.y.mean)"
+    "    #print(nodes.z.mean, nodes.x.mean, nodes.y.mean)\n",
+    "    dframe_to_swc(fname, nodes, output_dir=MEAN_CENTERED_CUBES_DIR)\n",
+    "    \n",
+    "multithreading(center_cube, zip(fnames, abs_paths), 16)"
    ]
   },
   {
