--- a/hackathon/profundo/data_processing/02_prep_SWC_for_img_generator.ipynb
+++ b/hackathon/profundo/data_processing/02_prep_SWC_for_img_generator.ipynb
@@ -161,7 +161,8 @@
     "                              (nodes.y.between(nodes.y.min()+padding,nodes.y.max()+padding)) &\n",
     "                              (nodes.z.between(nodes.z.min()+padding,nodes.z.max()+padding))]\n",
     "        \n",
-    "        sampled_nodes = central_nodes.sample(n=50, replace=False)\n",
+    "        n_central_nodes = central_nodes.len\n",
+    "        sampled_nodes = central_nodes.sample(n=np.min(50, n_central_nodes/20), replace=False)\n",
     "        \n",
     "        for sample_i, center_node in sampled_nodes.iterrows():\n",
     "                # grab all nodes in neighborhood of center_node\n",
