fixed a few issues with edge cases

--- a/hackathon/profundo/data_processing/02_prep_SWC_for_img_generator.ipynb
+++ b/hackathon/profundo/data_processing/02_prep_SWC_for_img_generator.ipynb
@@ -161,21 +161,22 @@
     "                              (nodes.y.between(nodes.y.min()+padding,nodes.y.max()+padding)) &\n",
     "                              (nodes.z.between(nodes.z.min()+padding,nodes.z.max()+padding))]\n",
     "        \n",
-    "        n_central_nodes = central_nodes.len\n",
-    "        sampled_nodes = central_nodes.sample(n=np.min(50, n_central_nodes/20), replace=False)\n",
-    "        \n",
-    "        for sample_i, center_node in sampled_nodes.iterrows():\n",
-    "                # grab all nodes in neighborhood of center_node\n",
-    "                sample = nodes.loc[(nodes.x.between(center_node.x.item()-half_size, center_node.x.item()+half_size)) &\n",
-    "                                  (nodes.y.between(center_node.y.item()-half_size, center_node.y.item()+half_size)) &\n",
-    "                                  (nodes.z.between(center_node.z.item()-half_size, center_node.z.item()+half_size))]\n",
-    "                \n",
-    "                #print(sample)\n",
+    "        n_central_nodes = len(central_nodes.index)\n",
+    "        if n_central_nodes > 0:\n",
+    "            sampled_nodes = central_nodes.sample(n=np.min([50, int(n_central_nodes/20)]), replace=False)\n",
     "\n",
-    "                # save sample to swc\n",
-    "                #print(\"saving \", fnames[i])\n",
-    "                dframe_to_swc(swc_fname+\"sample{}\".format(sample_i), sample,\n",
-    "                             output_dir=\"../data/05_sampled_cubes/\")\n",
+    "            for sample_i, center_node in sampled_nodes.iterrows():\n",
+    "                    # grab all nodes in neighborhood of center_node\n",
+    "                    sample = nodes.loc[(nodes.x.between(center_node.x.item()-half_size, center_node.x.item()+half_size)) &\n",
+    "                                      (nodes.y.between(center_node.y.item()-half_size, center_node.y.item()+half_size)) &\n",
+    "                                      (nodes.z.between(center_node.z.item()-half_size, center_node.z.item()+half_size))]\n",
+    "\n",
+    "                    #print(sample)\n",
+    "\n",
+    "                    # save sample to swc\n",
+    "                    #print(\"saving \", fnames[i])\n",
+    "                    dframe_to_swc(swc_fname+\"sample{}\".format(sample_i), sample,\n",
+    "                                 output_dir=\"../data/05_sampled_cubes/\")\n",
     "    else:  # SWC does not have large enough dims\n",
     "        #print(\"dims too small \", x_span, y_span, z_span) \n",
     "        pass\n",
