multiproccess TIFF generation

--- a/hackathon/profundo/data_processing/04_swc_to_nparray.ipynb
+++ b/hackathon/profundo/data_processing/04_swc_to_nparray.ipynb
@@ -8,7 +8,67 @@
     "\n",
     "We can't feed the SWC files directly into our neural network. First, we must connect the nodes, then somehow load them into numpy.\n",
     "\n",
-    "In the interest of time, I will use already-existing Vaa3D plugins to first render 3D TIFF images, which can then be loaded with numpy."
+    "In the interest of time, I will use already-existing Vaa3D plugins to first render 3D TIFF images, which can then be loaded with numpy.\n",
+    "\n",
+    "First, I want a list of file names."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from swc_io import get_fnames_and_abspath_from_dir, swc_to_TIFF\n",
+    "\n",
+    "MEAN_CENTERED_CUBES_DIR = \"../data/06_centered_cubes\"\n",
+    "CUBES_DIRECTORY = 'cubes_directory.txt'\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "#with open(CUBES_DIRECTORY, 'w+') as cubes_directory:\n",
+    "#    for cube_swc_path in abs_paths:\n",
+    "#      cubes_directory.write(\"%s\\n\" % cube_swc_path)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import tkinter as tk\n",
+    "from tkinter import filedialog\n",
+    "\n",
+    "root = tk.Tk()\n",
+    "root.withdraw()\n",
+    "\n",
+    "vaa3d_path = filedialog.askopenfilename(title='Select compiled Vaa3d binary')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from threader import multithreading\n",
+    "\n",
+    "#fnames, abs_paths = get_fnames_and_abspath_from_dir(BRANCHES_DIR)\n",
+    "fnames, abs_paths = get_fnames_and_abspath_from_dir(MEAN_CENTERED_CUBES_DIR)\n",
+    "assert(len(abs_paths)>0)\n",
+    "\n",
+    "vaa3d_repeated = [vaa3d_path for _ in range(len(abs_paths))]\n",
+    "\n",
+    "multithreading(swc_to_TIFF, zip(fnames, abs_paths, vaa3d_repeated), 16)"
    ]
   },
   {
@@ -18,34 +78,8 @@
    "outputs": [],
    "source": [
     "from pyspark import SparkContext\n",
-    "import markovify\n",
     "\n",
-    "sc = SparkContext(appName='SparkSpeechGenereator')\n",
-    "\n",
-    "STATE_SIZE = 3\n",
-    "SAVE_MODELS = True\n",
-    "ABSTRACTS_FILE = \"./results/Num_anal_abstracts.csv\"\n",
-    "\n",
-    "def clean_text_for_markovify(text):\n",
-    "    '''\n",
-    "    Markovify has a few symbols it hates. we'll filter them\n",
-    "    https://github.com/jsvine/markovify/blob/master/markovify/text.py#L104\n",
-    "    '''\n",
-    "    text = text.replace(\"'\", \"\").replace('\"', \"\").replace(\"(\", \"\")\\\n",
-    "        .replace(\")\", \"\").replace(\"[\", \"\").replace(\"]\", \"\")\n",
-    "    return text\n",
-    "\n",
-    "\n",
-    "def split_line(line):\n",
-    "    \"\"\"all_abracts.csv has file_name, abstract\n",
-    "    let's just grab abstracts for now\"\"\"\n",
-    "    try:\n",
-    "        strings = line.split(',', 1)\n",
-    "        # TODO: return category of the text\n",
-    "        return \"_\", str(strings[1])\n",
-    "    except:\n",
-    "        print(\"line skipped in split_line\")\n",
-    "        pass\n",
+    "sc = SparkContext(appName='SWC2npy')\n",
     "\n",
     "def combine_abstract_text(text1, text2):\n",
     "    \"\"\"markovify works best when each corpus is a single huge string. theefore,\n",
@@ -116,8 +150,7 @@
     "        print(\"wrote json to disk for model {}\".format(model_name))\n",
     "\n",
     "\n",
-    "abstracts = sc.textFile(ABSTRACTS_FILE)\n",
-    "abstracts = abstracts.map(clean_text_for_markovify)\n",
+    "abstracts = sc.textFile(CUBES_DIRECTORY)\n",
     "abstracts = abstracts.map(split_line)\n",
     "abstracts = abstracts.filter(lambda tup: tup[1] is not None)\n",
     "abstracts = abstracts.filter(lambda tup: len(tup[1]) >= 12)\n",
