--- a/hackathon/ouyang/angle_calculate/README
+++ b/hackathon/ouyang/angle_calculate/README
@@ -1,10 +1,7 @@
-How to build R inside Vaa3D(Linux).
-
-
-
-1.In order to run the code£¬R must be installed in the system, also "RInside", "Rcpp" , "ggplot2" , and "svglite" packages must be installed within R.
-
-2.linus/rinside/inst/examples/qt/qtdensity.pro project can be built using qmake and make, running the resulting 'qtdensity' binary should generate a Qt window with an svg ggplot2 density plot of two random distributions.
-
-3.build plugin 'vaa3d_tools\hackathon\linus\sholl_swc_R' with qmake and make 
-4.use the plugin in Vaa3D ,directory £º'neuron_analysis--sholl_analysis_swc--sholl_swc' and choose a SWC. file to show the analysis result in R
+## !
+qmake and make to build this plugin in your computer of linux
+## !
+use this plugin in Vaa3D and open a sorted swc.file
+## !
+and it shows all the remote angles of branchs(y) and the ids of corresponding branch node(x) from dendrite
+also angle of branch bigger than 90 degree will be in red in R
