--- a/released_plugins/v3d_plugins/ultratracer/README
+++ b/released_plugins/v3d_plugins/ultratracer/README
@@ -1,13 +1,19 @@
-How to use UltraTracer framework to trace fMOST whole mouse brain data
-1.Checkout the latest code, and build UltraTracer plugin under "vaa3d_tools/released_plugins/v3d_plugins/ultratracer/", APP2 plugin under "vaa3d_tools/released_plugins/v3d_plugins/neurontracing_vn2/", and line detecor plugin under "/vaa3d_tools/hackathon/zhi/line_detector/".
-2.Using command line, run "v3d -x ultratracer -f trace_APP2_GD -i Terafly_HighestResoluton_Folder -p marker_file block_size adap_win channel bkg_thresh"
-Terafly_HighestResoluton_Folder: the highest resolution folder from TeraConverter
+How to use UltraTracer2 framework to trace fMOST whole mouse brain data on Linux:
+1.Checkout the latest code.
+2.Build 3D Caffe using the instruction under "vaa3d_tools/hackathon/zhi/deep_learning/3D_unet/readme.md".
+3.Build deep learning prediction plugin under "vaa3d_tools/hackathon/zhi/deep_learning/prediction/" 
+4.Build APP2 plugin under "vaa3d_tools/released_plugins/v3d_plugins/neurontracing_vn2/" 
+5.Build UltraTracer plugin under "vaa3d_tools/released_plugins/v3d_plugins/ultratracer/",  
+
+6.Using command line, run "v3d -x ultratracer -f trace_APP2_GD -i Terafly_Folder -p marker_file block_size adap_win channel bkg_thresh"
+Terafly_Folder: one resolution folder from TeraConverter
 marker_file: starting location 
 block_size: the initial block size, default 512
 adap_win: 1 for adapative window, 0 for fixed window
 channel: from 1 
-bkg_thresh: background threshold used in APP2 tracing
-3. The final SWC file is named "nc_APP2_GD.swc" under the same folder which contains the highest terafly folder.
+bkg_thresh: background threshold used in APP2 tracing, AUTO for automatic thresholding
+
+7.The final SWC file will be named as "marker_file_nc_APP2_GD.swc" under the same folder which contains the marker_file.
 
 Here is one example script used to trace all markers in one folder:
 
@@ -15,15 +21,9 @@ Here is one example script used to trace all markers in one folder:
 cd /local2/fmost-data/mouseID_26174-TDI51302025_converted/22singleCells_swcs/
 for markername in `ls *.marker`
 do 
-	echo $markername
-	if [ ! -f '/local2/fmost-data/mouseID_26174-TDI51302025_converted/'${markername}_app2_axon.swc ]; then 
-		export DISPLAY=:$RANDOM	
-		Xvfb $DISPLAY -auth /dev/null &	
-		timeout 18000 /local2/zhi/Vaa3D_CentOS_64bit_forMK/start_vaa3d.sh -x ultratracer -f trace_APP2_GD -i '/local2/fmost-data/mouseID_26174-TDI51302025_converted/RES(36400x23814x11772)' -p '/local2/fmost-data/mouseID_26174-TDI51302025_converted/22singleCells_swcs/'$markername 512 1 1 AUTO
-		rm -rf /local2/fmost-data/mouseID_26174-TDI51302025_converted/*GD_Curveline
-		rm -rf /local2/fmost-data/mouseID_26174-TDI51302025_converted/*tmp_APP2*
-		rm -rf /local2/fmost-data/mouseID_26174-TDI51302025_converted/tips
-		mv /local2/fmost-data/mouseID_26174-TDI51302025_converted/nc_APP2_GD.swc '/local2/fmost-data/mouseID_26174-TDI51302025_converted/'${markername}_app2_axon.swc
-	fi
+	/local2/zhi/Vaa3D_CentOS_64bit_forMK/start_vaa3d.sh -x ultratracer -f trace_APP2_GD -i '/local2/fmost-data/mouseID_26174-TDI51302025_converted/RES(36400x23814x11772)' -p '/local2/fmost-data/mouseID_26174-TDI51302025_converted/22singleCells_swcs/'$markername 512 1 1 AUTO
 done
  
+
+
+By Zhi Zhou, May 29, 2019
