--- a/hackathon/mBrainAligner/README
+++ b/hackathon/mBrainAligner/README
@@ -1,7 +1,7 @@
 This code repository hosts source code for mBrainAligner.
 
 
-**Folder structure:**
+Folder structure:
 
 * removal_stripe
 * global_registration: robust point matching based automatic global registration
@@ -11,22 +11,16 @@ This code repository hosts source code for mBrainAligner.
 * demo
 
 
-**How to compile and use:**
-
-——————
+* How to compile and use:
 in the removal_stripe folder，.in the global_registration, 2.5D_corner_detection and local_registration folders, we provide the source code and  
 a MS Visual Studio 2013 project file "******.vcxproj" for compilation.
 
-**Prerequisites:**
-
-——————
+Prerequisites:
 Please follow this link to build Vaa3D on Windows with qmake using VS2013 and Qt4.8.6:
 https://github.com/Vaa3D/Vaa3D_Wiki/wiki/Build-Vaa3D-on-Windows-(QMake)
 
-# **Configure and Build:**
-
-——————
-## * Enter "PATH\vaa3d_tools\hackathon\mBrainAligner\"folder.
-## * Use MS Visual Studio 2013 to open "******.vcxproj".
-## * Make sure it's configured Release and x64 as the platform, then build the solution.
+Configure and Build:
+* Enter "PATH\vaa3d_tools\hackathon\mBrainAligner\"folder.
+* Use MS Visual Studio 2013 to open "******.vcxproj".
+* Make sure it's configured Release and x64 as the platform, then build the solution.
 
