--- a/hackathon/mBrainAligner/README
+++ b/hackathon/mBrainAligner/README
@@ -7,8 +7,8 @@ Folder structure:
 * global_registration: robust point matching based automatic global registration
 * local_registration: coherent landmark mapping (CLM) based automatic local registration
 * Semi_automatic_registration
-* 2.5D_corner_detection
-* demo
+* Demo
+* Tools
 
 
 * How to compile and use:
