--- a/hackathon/mBrainAligner/README
+++ b/hackathon/mBrainAligner/README
@@ -6,9 +6,9 @@ Folder structure:
 * preprocessing: removal of stripe artifact
 * global_registration: robust point matching based automatic global registration
 * local_registration: coherent landmark mapping (CLM) based automatic local registration
-* Semi_automatic_registration
+* Semi_automatic_registration: interactive registration system
 * Demo
-* Tools
+* Tools: 2.5D_corner_detection and swc_registration
 
 
 * How to compile and use:
