--- a/hackathon/mBrainAligner/4.semi_automatic_registration/README
+++ b/hackathon/mBrainAligner/4.semi_automatic_registration/README
@@ -1,3 +1,6 @@
+
+# Semi_automatic_registration
+
 Unzip `semi_automatic_registration.7z`, then download the `fixed_image.7z` compressed package from 
 
 https://drive.google.com/file/d/1uPT02C0iSzLMYh56JVH-kUvNa4pqwrcV/view?usp=sharing, unzip it and put 
